--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
-    <title>Roboflow Demo</title> -->
+    <title>Roboflow Demo</title>
 
     <!-- <meta name="viewport" content="width=640, user-scalable=no" /> -->
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
         integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
@@ -21,39 +21,12 @@
 
     <link rel="stylesheet" href="./main.css">
     <script src="./main.js"></script>
-</head> -->
+</head>
 
-<!-- <body class="loading">
+<body class="loading">
     <video id="video" autoplay muted playsinline></video>
     <div id="fps"></div>
     <div id="dashboard"></div>
-</body> -->
-
-<!-- </html> -->
-
-
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Object Detection</title>
-    <link rel="stylesheet" href="main.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-        integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.20/lodash.min.js"
-        integrity="sha512-90vH1Z83AJY9DmlWa8WkjkV79yfS2n2Oxhsi2dZbIv0nC4E6m5AbH8Nh156kkM7JePmqD6tcZsfad1ueoaovww=="
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/async/3.2.0/async.min.js"
-        integrity="sha512-6K6+H87tLdCWvY5ml9ZQXLRlPlDEt8uXmtELhuJRgFyEDv6JvndWHg3jadJuBVGPEhhA2AAt+ROMC2V7EvTIWw=="
-        crossorigin="anonymous"></script>
-
-    <script src="https://cdn.roboflow.com/0.2.26/roboflow.js"></script>
-</head>
-<body class="loading">
-    <video autoplay playsinline style="display:none;"></video>
-    <div id="dashboard"></div>
-    <div id="fps"></div>
-    <button id="capture">Capture Photo</button>
-    <script src="main.js"></script>
 </body>
+
 </html>
