--- a/index.html
+++ b/index.html
@@ -20,16 +20,10 @@
     <link rel="stylesheet" href="./main.css">
     <script src="./main.js"></script>
 </head>
-<!-- <body class="loading">
+<body class="loading">
     <video id="video" autoplay muted playsinline></video>
     <div id="fps"></div>
     <div id="dashboard"></div>
     <button id="captureButton">Capture Photo</button>
-</body> -->
-<body>
-<h1>Offline Object Detection</h1>
-    <video id="videoElement" width="640" height="480" autoplay></video>
-    <canvas id="canvasElement" width="640" height="480"></canvas>
-    <div id="predictions"></div>
 </body>
 </html>
