--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
     <div id="fps"></div>
     <div id="dashboard"></div>
     <button id="captureButton">Capture Photo</button>
+    <canvas id="canvas"></canvas>
 </body>
 </html>
