--- a/index.html
+++ b/index.html
@@ -16,21 +16,13 @@
     <script src="https://cdn.roboflow.com/0.2.26/roboflow.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script>
-    <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort.min.js"></script>
 
     <link rel="stylesheet" href="./main.css">
     <script src="./main.js"></script>
 </head>
-<!-- <body class="loading">
+<body class="loading">
     <video id="video" autoplay muted playsinline></video>
     <div id="fps"></div>
-    <div id="dashboard"></div>
-    <button id="captureButton">Capture Photo</button>
-</body> -->
-
-<body>
-    <video autoplay></video>
-    <canvas></canvas>
     <div id="dashboard"></div>
     <button id="captureButton">Capture Photo</button>
 </body>
