--- a/index.html
+++ b/index.html
@@ -69,6 +69,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script>
-    <script src="./main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
