--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="https://cdn.roboflow.com/0.2.26/roboflow.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script>
+    <script src="https://cdn.jsdelivr.net/npm/onnxjs/dist/onnx.min.js"></script>
 
     <link rel="stylesheet" href="./main.css">
     <script src="./main.js"></script>
